Add binding requirements
