# server/docs/swagger.yaml
@@ -30,6 +30,14 @@ definitions:
         allOf:
         - $ref: '#/definitions/models.Weights'
         description: Веса использованные в расчете
+    required:
+    - additionalInfo
+    - cow
+    - downSides
+    - exterior
+    - measures
+    - ratings
+    - weights
     type: object
   models.AdditionalInfo:
     properties:
@@ -62,6 +70,9 @@ definitions:
       lactationNumber:
         description: Номер лактации (целое, беззнаковое число)
         type: integer
+    required:
+    - calvingDate
+    - firstMilkingDate
     type: object
   models.Cow:
     properties:
@@ -102,6 +113,17 @@ definitions:
         description: Селекс номер коровы
         example: 98989
         type: integer
+    required:
+    - birthDate
+    - bloody
+    - breedName
+    - holdingInn
+    - holdingName
+    - hozName
+    - inventoryNumber
+    - name
+    - rshnnumber
+    - selecsNumber
     type: object
   models.DownSides:
     properties:
@@ -146,7 +168,7 @@ definitions:
         example: "2001-03-23"
         type: string
       backBoneQuality:
-        description: качество костяка (9 баллов)
+        description: Качество костяка (9 баллов)
         type: number
       backNippleDiameter:
         description: Диаметр задних сосков (9 баллов)
@@ -231,13 +253,13 @@ definitions:
         description: Угол наклона крестца (9 баллов)
         type: number
       sacrumHeight:
-        description: высота в крестце (9 баллов)
+        description: Высота в крестце (9 баллов)
         type: number
       sacrumLength:
         description: Длина крестца (9 баллов)
         type: number
       sacrumWidth:
-        description: ширина в крестце (9 баллов)
+        description: Ширина в крестце (9 баллов)
         type: number
       topLine:
         description: Линия верха (9 баллов)
@@ -254,6 +276,44 @@ definitions:
       udderVeins:
         description: Выраженность вен вымени (9 баллов)
         type: number
+    required:
+    - assessmentDate
+    - backBoneQuality
+    - backNippleDiameter
+    - backNippleLocationBackView
+    - backUdderSegmentsLocationHeight
+    - backUdderSegmentsWidth
+    - body
+    - bodyDepth
+    - bodyType
+    - category
+    - centralLigamentDepth
+    - chestWidth
+    - deception
+    - fatness
+    - forelegWalk
+    - frontNippleDiameter
+    - frontNippleLength
+    - frontNippleLocationBackView
+    - frontUdderSegmentsLocation
+    - harmonyOfMovement
+    - hindLegWalkBackView
+    - hindLegWalkSideView
+    - hoofAngle
+    - limbs
+    - milkType
+    - rating
+    - ribsAngle
+    - sacrum
+    - sacrumAngle
+    - sacrumHeight
+    - sacrumLength
+    - sacrumWidth
+    - topLine
+    - udder
+    - udderBalance
+    - udderDepth
+    - udderVeins
     type: object
   models.Measures:
     properties:
@@ -302,6 +362,22 @@ definitions:
       udderDepth:
         description: Глубина вымени (Сантиметры или градусы)
         type: number
+    required:
+    - backNippleDiameter
+    - backUdderSegmentsLocationHeight
+    - backUdderSegmentsWidth
+    - centralLigamentDepth
+    - chestWidth
+    - frontNippleDiameter
+    - frontNippleLength
+    - frontUdderSegmentsLocation
+    - hindLegWalkSideView
+    - hoofAngle
+    - sacrumAngle
+    - sacrumHeight
+    - sacrumWidth
+    - udderBalance
+    - udderDepth
     type: object
   models.Ratings:
     properties:
@@ -368,6 +444,17 @@ definitions:
       userDefinedWithoutDownsidesUdder:
         description: Вымя (100 баллов) без учета недостатков, оценка пользователя
         type: number
+    required:
+    - automaticWithDownsidesBody
+    - automaticWithDownsidesLimbs
+    - automaticWithDownsidesMilkType
+    - automaticWithDownsidesSacrum
+    - automaticWithDownsidesUdder
+    - automaticWithoutDownsidesBody
+    - automaticWithoutDownsidesLimbs
+    - automaticWithoutDownsidesMilkType
+    - automaticWithoutDownsidesSacrum
+    - automaticWithoutDownsidesUdder
     type: object
   models.Weights:
     properties:
@@ -488,6 +575,41 @@ definitions:
       userDefinedUdder:
         description: Вымя. Вес, определенный пользователем
         type: number
+    required:
+    - automaticBody
+    - automaticLimbs
+    - automaticMilkType
+    - automaticSacrum
+    - automaticUdder
+    - backBoneQuality
+    - backNippleDiameter
+    - backNippleLocationBackView
+    - backUdderSegmentsLocationHeight
+    - backUdderSegmentsWidth
+    - bodyDepth
+    - bodyType
+    - centralLigamentDepth
+    - chestWidth
+    - deception
+    - fatness
+    - forelegWalk
+    - frontNippleDiameter
+    - frontNippleLength
+    - frontNippleLocationBackView
+    - frontUdderSegmentsLocation
+    - harmonyOfMovement
+    - hindLegWalkBackView
+    - hindLegWalkSideView
+    - hoofAngle
+    - ribsAngle
+    - sacrumAngle
+    - sacrumHeight
+    - sacrumLength
+    - sacrumWidth
+    - topLine
+    - udderBalance
+    - udderDepth
+    - udderVeins
     type: object
   user.ChangePasswordRequest:
     properties:
@@ -499,6 +621,9 @@ definitions:
         description: Пароль
         example: FedorsPassword15
         type: string
+    required:
+    - email
+    - password
     type: object
   user.ConfirmMailRequest:
     properties:
@@ -510,6 +635,9 @@ definitions:
         description: Зашифрованные данные пользователя из Register
         example: 12308mjkfa01jkfa_!@#
         type: string
+    required:
+    - code
+    - userData
     type: object
   user.ConfirmPasswordRequest:
     properties:
@@ -521,6 +649,9 @@ definitions:
         description: Зашифрованные данные пользователя из Register
         example: 12308mjkfa01jkfa_!@#
         type: string
+    required:
+    - code
+    - userData
     type: object
   user.LoginData:
     properties:
@@ -532,6 +663,9 @@ definitions:
         description: Пароль пользователя
         example: samplePassword123
         type: string
+    required:
+    - email
+    - password
     type: object
   user.RefreshRequest:
     properties:
